2007-04-03  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-private-key-properties.glade: Show expired date properly
    in warning message for private keys.
    
2007-03-27  Adam Schreiber <sadam@clemson.edu>
    
    * src/seahorse-key-manager.c: Fix il8n of the about dialog.
    Patch from Bjoern Voigt.  Fixes bug #423082
    
2007-03-22  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: 
    * INSTALL: Require GTK+ version 2.10

2007-03-19  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-operation.h:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * src/seahorse-ssh-upload.c: Recognize port properly in SSH key upload 
    Fixes bug #418205
    
2007-03-19  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-status.c:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-server-source.c: 
    * libseahorse/seahorse-ssh-key-data.c: (possible crasher)
    * libseahorse/seahorse-util.c: (minor capitalization bug)
    * src/seahorse-ssh-upload.c: Satisfy compiler warnings.
    
2007-03-19  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c: 
    * libseahorse/seahorse-passphrase.c: Setup icons for passphrase 
    prompts.

2007-03-18  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-gtkstock.c: Setup a default icon for processes.
    Fixes bug #419264
    
2007-03-17  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-widget.c: Link swidget error dialogs to their 
    parent
    * configure.in: Allow building the Epiphany plugin with Epiphany 2.18.
    Fixes #417806

2007-03-17  Nate Nielsen  <nielsen@memberwebs.com>

    * acinclude.m4: Fixed mlock checks. Fixes bug #417757 and 
    bug #417758
    
2007-03-17  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-io.c: Use /tmp directory for agent sockets
