@@ -1,5 +1,10 @@
 2007-04-03  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * src/seahorse-key-manager.c: Fix crasher when deleting more than one 
+    private keys. Fixes bug #417901
+    
+2007-04-03  Nate Nielsen  <nielsen@memberwebs.com>
+
     * src/seahorse-pgp-private-key-properties.glade: Show expired date properly
     in warning message for private keys.
     
